# task_mngr

./: CMakeLists.txt  LICENSE  README.md
headers/: ProcListMngr.h  RequestMngr.h
rest_help/: RestartHelper.cpp
src/: ProcListMngr.cpp  RequestMngr.cpp  main.cpp
templates/: examples.txt
